Added dummy edges for assumptions
Added printing for ARG debugging

removed commented out code

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@47353 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c