@@ -8,53 +8,52 @@
 
 package org.sosy_lab.cpachecker.cpa.hb;
 
-import static org.sosy_lab.cpachecker.cpa.hb.HappensBeforeUtils.extendMapOfSets;
-import static org.sosy_lab.cpachecker.cpa.hb.HappensBeforeUtils.subtractMapOfSets;
-import static org.sosy_lab.cpachecker.util.CFAUtils.allEnteringEdges;
-import static org.sosy_lab.cpachecker.util.CFAUtils.allLeavingEdges;
-
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
+import org.sosy_lab.cpachecker.cfa.ast.c.CVariableDeclaration;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
-import org.sosy_lab.cpachecker.core.interfaces.AbstractStateWithLocation;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractStateWithLocations;
 import org.sosy_lab.cpachecker.core.interfaces.Graphable;
 import org.sosy_lab.cpachecker.cpa.callstack.CallstackState;
 import org.sosy_lab.cpachecker.cpa.location.LocationState;
 import org.sosy_lab.cpachecker.util.Pair;
-import org.sosy_lab.cpachecker.util.states.MemoryLocation;
 
 /**
  * We store the following information about each state:
- *   * set of revisitable reads per memory address
- *   * set of writes per memory address
+ *   * set of reads per memory address
+ *   * set of (still visible) writes per memory address
  */
 
 record HappensBeforeState(
-    Map<MemoryLocation, Set<MemoryEvent>> revisitableReads,
-    Map<MemoryLocation, Set<MemoryEvent>> writes,
     Map<Integer, Pair<LocationState, CallstackState>> threads,
+    Map<String, Integer> cssaCounters,
     int prevActiveThread,
-    int nextActiveThread
+    int nextActiveThread,
+    int eid,
+    Map<Integer, MemoryEvent> lastEvent,
+    ExecutionGraph lastG,
+    ExecutionGraph g
 ) implements AbstractState, AbstractStateWithLocations, Graphable {
 
   static HappensBeforeState empty() {
     return new HappensBeforeState(
         ImmutableMap.of(),
         ImmutableMap.of(),
-        ImmutableMap.of(),
         -1,
-        0
-    );
+        0,
+        0,
+        ImmutableMap.of(),
+        ExecutionGraph.empty(),
+        ExecutionGraph.empty()
+        );
   }
 
   @Override
@@ -67,29 +66,41 @@ record HappensBeforeState(
 
   @Override
   public Iterable<CFAEdge> getOutgoingEdges() {
-    return nextActiveThread >= 0
-        ? StreamSupport.stream(
-                threads.get(nextActiveThread).getFirstNotNull().getOutgoingEdges().spliterator(),
-                false)
-            .map(edge -> EdgeCloningUtils.clone(edge, nextActiveThread))
-            .collect(Collectors.toList())
-        : Collections.emptyList();
+    if (g.pendingRf().isEmpty()) {
+      return nextActiveThread >= 0
+          ? StreamSupport.stream(
+                  threads.get(nextActiveThread).getFirstNotNull().getOutgoingEdges().spliterator(),
+                  false)
+              .map(
+                  edge ->
+                      HappensBeforeEdgeTools.clone(edge, nextActiveThread, cssaCounters))
+              .collect(Collectors.toList())
+          : Collections.emptyList();
+    } else {
+      return List.of(HappensBeforeEdgeTools.createAssume(threads.get(nextActiveThread).getFirstNotNull().getLocationNode(), g));
+    }
   }
 
   @Override
   public Iterable<CFAEdge> getIncomingEdges() {
-    return prevActiveThread >= 0
-           ? StreamSupport.stream(
-            threads.get(prevActiveThread).getFirstNotNull().getIncomingEdges().spliterator(),
-            false)
-               .map(edge -> EdgeCloningUtils.clone(edge, prevActiveThread))
-               .collect(Collectors.toList())
-           : Collections.emptyList();
+    if (lastG.pendingRf().isEmpty()) {
+      return prevActiveThread >= 0
+          ? StreamSupport.stream(
+                  threads.get(prevActiveThread).getFirstNotNull().getIncomingEdges().spliterator(),
+                  false)
+              .map(edge -> HappensBeforeEdgeTools.clone(edge, prevActiveThread, cssaCounters))
+              .collect(Collectors.toList())
+          : Collections.emptyList();
+    } else {
+      return List.of(HappensBeforeEdgeTools.createAssume(threads.get(nextActiveThread).getFirstNotNull().getLocationNode(), lastG));
+    }
   }
 
   @Override
   public String toDOTLabel() {
-    return toString();
+    final var threadsPrint = ImmutableMap.<Integer, CFANode>builder();
+    threads.forEach((pInteger,pLocationStateCallstackStatePair) -> threadsPrint.put(pInteger, pLocationStateCallstackStatePair.getFirstNotNull().getLocationNode()));
+    return "%s\\nnext: %s\\nExecGraph: %s".formatted(threads, nextActiveThread, g.toDOTLabel());
   }
 
   @Override
@@ -99,28 +110,40 @@ record HappensBeforeState(
 
   // copy()-like methods
 
-  public HappensBeforeState addRevisitableRead(final MemoryLocation var, final MemoryEvent event) {
-    final var newRevisitableReads = extendMapOfSets(revisitableReads, var, event);
-    return new HappensBeforeState(newRevisitableReads, writes, threads, prevActiveThread, nextActiveThread);
+  Collection<HappensBeforeState> addRead(final int thread, final CVariableDeclaration var){
+    final var newMemEvent = new MemoryEvent(MemoryEventType.READ, var, thread, eid, lastEvent.get(thread));
+    final var newLastEvent = ImmutableMap.<Integer, MemoryEvent>builder().putAll(lastEvent).put(thread, newMemEvent).buildKeepingLast();
+    return g.addRead(newMemEvent).stream().map(it ->
+        new HappensBeforeState(threads, cssaCounters, prevActiveThread, nextActiveThread, eid + 1, newLastEvent, g, it)).toList();
   }
 
-  public HappensBeforeState removeRevisitableRead(final MemoryLocation var, final MemoryEvent event) {
-    final var newRevisitableReads = subtractMapOfSets(revisitableReads, var, event);
-    return new HappensBeforeState(newRevisitableReads, writes, threads, prevActiveThread, nextActiveThread);
+  Collection<HappensBeforeState> addWrite(final int thread, final CVariableDeclaration var){
+    final var newMemEvent = new MemoryEvent(MemoryEventType.WRITE, var, thread, eid, lastEvent.get(thread));
+    final var newLastEvent = ImmutableMap.<Integer, MemoryEvent>builder().putAll(lastEvent).put(thread, newMemEvent).buildKeepingLast();
+    return g.addWrite(newMemEvent).stream().map(it ->
+        new HappensBeforeState(threads, cssaCounters, prevActiveThread, nextActiveThread, eid + 1, newLastEvent, g, it)).toList();
   }
 
-  public HappensBeforeState addWrite(final MemoryLocation var, final MemoryEvent event) {
-    final var newWrites = extendMapOfSets(writes, var, event);
-    return new HappensBeforeState(revisitableReads, newWrites, threads, prevActiveThread, nextActiveThread);
-  }
-
-  public HappensBeforeState updateThread(final int idx, final LocationState pLocationState, final CallstackState pCallstackState, final int nextIdx) {
+  HappensBeforeState updateThread(final int idx, final LocationState pLocationState, final CallstackState pCallstackState, final int nextIdx, final Map<String, Integer> pCssaCounters) {
     final var newThreads = ImmutableMap.<Integer, Pair<LocationState, CallstackState>>builder().putAll(threads).put(idx, Pair.of(pLocationState, pCallstackState)).buildKeepingLast();
-    return new HappensBeforeState(revisitableReads, writes, newThreads, idx, nextIdx);
+    return new HappensBeforeState(newThreads, pCssaCounters, idx, nextIdx, eid, lastEvent, g, g);
   }
 
-  public HappensBeforeState addThread(final int idx, final LocationState pLocationState, final CallstackState pCallstackState) {
-    final var newThreads = ImmutableMap.<Integer, Pair<LocationState, CallstackState>>builder().putAll(threads).put(idx, Pair.of(pLocationState, pCallstackState)).buildKeepingLast();
-    return new HappensBeforeState(revisitableReads, writes, newThreads, prevActiveThread, nextActiveThread);
+  HappensBeforeState addThread(final int threadId, final int parentThreadId, final LocationState pLocationState, final CallstackState pCallstackState) {
+    final var newThreads = ImmutableMap.<Integer, Pair<LocationState, CallstackState>>builder().putAll(threads).put(threadId, Pair.of(pLocationState, pCallstackState)).buildKeepingLast();
+    if (lastEvent.get(parentThreadId) != null) {
+      final var newLastEvent =
+          ImmutableMap.<Integer, MemoryEvent>builder()
+              .putAll(lastEvent)
+              .put(threadId, lastEvent.get(parentThreadId))
+              .buildKeepingLast();
+      return new HappensBeforeState(newThreads, cssaCounters, prevActiveThread, nextActiveThread, eid, newLastEvent, g, g);
+    } else {
+      return new HappensBeforeState(newThreads, cssaCounters, prevActiveThread, nextActiveThread, eid, lastEvent, g, g);
+    }
+  }
+
+  HappensBeforeState clearPending() {
+    return new HappensBeforeState(threads, cssaCounters, prevActiveThread, nextActiveThread, eid, lastEvent, lastG, g.clearPending());
   }
 }
